src/blocks/form/form.scss
@import 'form-mixins';

.form {

    // Box to limit content by width
    &__box {
        max-width: 23rem;
        display: flex;
        flex-direction: column;
        margin: 3rem 0;
    }

    &__vbox {
        display: grid;
        grid-template: 1fr 1fr / 15rem 15rem;
        gap: 2rem;
    }

    &__longbox {
        width: 30rem;
        margin: 1.5rem 0;
    }

    &__range-slider-container {
        width: 30rem;
        padding: 4rem 0;
    }

    &__range-slider {
        width: 100%;
        height: 0.6rem;
        border: none;
    }

    &__range-text {
        font-size: 1.2rem;
        line-height: 1.5 / 1.2 * 100%;
        color: $dark-shade-50-percent;
        font-weight: normal;
        text-transform: uppercase;
        display: flex;
        padding: 1.5rem 0;
        justify-content: flex-end;
    }

    &__box-with-likes {
        display: flex;
        width: 10rem;
        justify-content: space-between;
    }

    &__box-with-stars {
        display: flex;
        width: 28rem;
        justify-content: space-between;
    }

    &__container-richbox {
        max-width: 26.6rem;
    }

    &__container-datepicker {
        max-width: 32rem;
        margin: 3rem 0;
    }

    &__container-box {
        max-width: 26.6rem;
        margin: 3rem 0;
    }

    &__container-masked {
        max-width: 32rem;
        margin: 3rem 0 0 0;
    }

    &__container-bullet-list {
        max-width: 25.6rem;
    }

    &__container-review {
        max-width: 71rem;
    }

    &__container-room-info {
        margin-top: 3rem;
        max-width: 28rem;
    }

    // Classes for labels
    &__label {

        &_with-checkbox {
            display: flex;
            align-items: center;
            margin-bottom: 1rem;
            transition: 0.2s;

        }
    }

    &__label-text {
        margin: 0 0 2rem 0;
    }

    // Class for all text inputs (text, email etc.)
    &__text-field {
        width: 100%;
        height: 4.4rem;
        font-size: 1.4rem;
        color: $dark-shade-75-percent;
        padding: 13px 15px;
        border: 1px solid $dark-shade-25-percent;
        border-radius: 0.4rem;
        transition: 0.3s;

        &::placeholder {
            font-size: 1.4rem;
            color: $dark-shade-25-percent;
            line-height: 1.8 / 1.4 * 100%;
        }

        &:hover, &:focus {
            border: 1px solid $dark-shade-50-percent;
        }

        &_masked {}

    }

    &__checkbox {
        @include buttons-property(2rem, 2rem, 1rem, 0.4rem);
        align-self: flex-start;

        &:checked {
            border: 1px solid $purple;
            &::after, &::before {
                opacity: 1;
                visibility: visible;
            }
        }

        &::after, &::before {
            content: '';
            position: absolute;
            background: linear-gradient(180deg, $purple,$purple-second);
            height: 0.2rem;
            top: 50%;
            opacity: 0;
            visibility: hidden;
            transition: 0.2s;
        }

        &::after {
            left: 35%;
            width: 0.4rem;
            transform: translate(-50%, -50%) rotate(45deg);
        }
        &::before {
            left: 58%;
            width: 0.8rem;
            transform: translate(-50%, -50%) rotate(-45deg);
        }

        &_as-toggle {
            @include buttons-property(4rem, 2rem, 1rem, 1rem);

            &:checked {
                border: 1px solid $purple;
                &::after {
                    background: linear-gradient(180deg, $purple,$purple-second);
                    transform: translate(1.8rem, -50%);
                    transition: 0.2s;
                }
            }

            &::after {
                content: '';
                position: absolute;
                background: $dark-shade-25-percent;
                width: 1.2rem;
                height: 1.2rem;
                border-radius: 50%;
                top: 50%;
                left: 0.4rem;
                opacity: 1;
                visibility: visible;
                transform: translateY(-50%);
                transition: 0.2s;
            }
            &::before {
                display: none;
            }
        }
    }

    &__rich-checkbox {
        display: flex;
        flex-direction: column;
    }

    &__rich-checkbox-title {
        font-size: 1.4rem;
        font-weight: bold;
        line-height: 1.8 / 1.4 * 100%;
        color: $dark-shade-75-percent;
        margin-bottom: 0.5rem;
    }

    &__rich-checkbox-desc {
        font-size: 1.2rem;
        line-height: 1.4 / 1.2 * 100%;
        color: $dark-shade-50-percent;
    }

    &__radio {
        @include buttons-property(2rem, 2rem, 1.4rem, 50%);

        &:checked {
            border: 1px solid $purple;
            &::after {
                opacity: 1;
                visibility: visible;
            }
        }

        &::after {
            content: '';
            position: absolute;
            background: linear-gradient(180deg, $purple,$purple-second);
            width: 1.2rem;
            height: 1.2rem;
            border-radius: 50%;
            top: 50%;
            left: 50%;
            transform: translate(-50%, -50%);
            opacity: 0;
            visibility: hidden;
            transition: 0.2s;
        }

    }

    &__list {
    }

    &__list-item {
        position: relative;
        padding-left: 1.75rem;
        text-transform: none;

        &::before {
            content: '';
            background-color: $dark-shade-25-percent;
            width: 1rem;
            height: 1rem;
            border-radius: 50%;
            position: absolute;
            top: 1.25rem;
            left: 0;
            transform: translate(0, -50%);
        }
    }

}

@import './arrow/arrow.scss';
@import './dropdown/dropdown.scss';
@import './like-button/like-button.scss';
@import './star-button/star-button.scss';
@import './button//button.scss';
@import './pagination/pagination.scss';
@import './range-slider/range-slider.scss';
@import './user-review/user-review.scss';
@import './room-info/room-info.scss';
@import './datepicker/datepicker.scss';
@import './expandable-list/expandable-list.scss';
@import './subscription/subscription.scss';

